# audio-to-tactile

./: .gitignore  BUILD  CONTRIBUTING.md  Makefile  README.md  WORKSPACE  defs.bzl  lessons.txt  library.properties  makefile
demo/: tactile_processor.html  tactile_processor_web_bindings.js  tactile_processor_web_bindings.wasm
doc/: phone_embedding.md  phonetics.md  play_buzz.md  tactile_processor.md  tactophone.md
dsp/: auto_gain_control.c  auto_gain_control.h  auto_gain_control_test.c  biquad_filter.c  biquad_filter.h  biquad_filter_test.c  butterworth.c  butterworth.h  butterworth_test.c  complex.c  complex.h  complex_test.c  elliptic_fun.c  elliptic_fun.h  elliptic_fun_test.c  fast_fun.h  fast_fun_compute_tables.c  fast_fun_compute_tables.h  fast_fun_test.c  iir_design.h  iir_design_test.c  logging.h  logging_test.c  math_constants.h  math_constants_test.c  number_util.c  number_util.h  number_util_test.c  phasor_rotator.c  phasor_rotator.h  phasor_rotator_test.c  rational_factor_resampler.c  rational_factor_resampler.h  rational_factor_resampler_kernel.c  rational_factor_resampler_kernel.h  rational_factor_resampler_kernel_test.c  rational_factor_resampler_test.c  read_wav_file.h  read_wav_file_generic.c  read_wav_file_generic.h  (+11 more)
extras/android/cpp/: CMakeLists.txt  tuning_jni.cpp
frontend/: BUILD  carl_frontend.c  carl_frontend.h  carl_frontend_design.c  carl_frontend_design.h  carl_frontend_test.c
phonetics/: BUILD  embed_vowel.c  embed_vowel.h  embed_vowel_params.h  embed_vowel_test.c  nn_ops.c  nn_ops.h  nn_ops_test.c
sdl/: BUILD  basic_sdl_app.c  (+7 more)
(+846 files in other folders)
